优化法线可视化