@@ -9,10 +9,10 @@
     <version>4.0-SNAPSHOT</version>
 
     <properties>
-        <java.version>17</java.version>
-        <javafx.version>17.0.6</javafx.version>
-        <maven.compiler.source>17</maven.compiler.source>
-        <maven.compiler.target>17</maven.compiler.target>
+        <java.version>25</java.version>
+        <javafx.version>25.0.3</javafx.version>
+        <maven.compiler.source>25</maven.compiler.source>
+        <maven.compiler.target>25</maven.compiler.target>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
     </properties>
@@ -59,7 +59,7 @@
         <dependency>
             <groupId>org.projectlombok</groupId>
             <artifactId>lombok</artifactId>
-            <version>1.18.38</version>
+            <version>1.18.46</version>
         </dependency>
 
         <!--jna 依赖-->
@@ -83,15 +83,15 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-compiler-plugin</artifactId>
-                <version>3.13.0</version>
+                <version>3.14.1</version>
                 <configuration>
-                    <source>${java.version}</source> <!-- 替换为项目使用的 JDK 版本 -->
+                    <source>${java.version}</source>
                     <target>${java.version}</target>
                     <annotationProcessorPaths>
                         <path>
                             <groupId>org.projectlombok</groupId>
                             <artifactId>lombok</artifactId>
-                            <version>1.18.36</version>
+                            <version>1.18.46</version>
                         </path>
                     </annotationProcessorPaths>
                 </configuration>
@@ -148,6 +148,37 @@
                     </execution>
                 </executions>
             </plugin>
+
+
+            <plugin>
+                <groupId>org.graalvm.buildtools</groupId>
+                <artifactId>native-maven-plugin</artifactId>
+                <version>1.1.1</version>
+                <extensions>true</extensions>
+                <executions>
+                    <execution>
+                        <id>build-native</id>
+                        <goals>
+                            <goal>compile-no-fork</goal>
+                        </goals>
+                        <phase>package</phase>
+                    </execution>
+                </executions>
+                <configuration>
+                    <mainClass>com.bingbaihanji.StartMain</mainClass>
+                    <buildArgs>
+                        <arg>--enable-native-access=javafx.graphics</arg>
+                        <arg>-H:+ReportExceptionStackTraces</arg>
+                        <buildArg>--no-fallback</buildArg>
+                        <buildArg>-H:+JNI</buildArg>
+                        <buildArg>--initialize-at-run-time=com.sun.glass.ui.win.WinApplication</buildArg>
+                        <buildArg>--initialize-at-run-time=com.sun.javafx.tk.quantum.QuantumToolkit</buildArg>
+                        <buildArg>--initialize-at-run-time=com.sun.prism.d3d.D3DPipeline</buildArg>
+                    </buildArgs>
+                </configuration>
+
+            </plugin>
+
         </plugins>
     </build>
 
